--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
       <h1> Broadway Design
       </h1>
       <p>
-        <a class "nav" href="#"> Home
+        <a class="nav" href="#"> Home
         </a>
       </p>
       <p>
-        <a class "nav" href="#process"> Process </a>
+        <a class="nav" href="#process"> Process </a>
       </p>
       <p>
-        <a class "nav" href="#work"> Work </a>
+        <a class="nav" href="#work"> Work </a>
       </p>
       <p>
-        <a class "nav" href="#team"> Team </a>
+        <a class="nav" href="#team"> Team </a>
       </p>
       <p>
-        <a class "nav" href="#contact"> Contact </a>
+        <a class="nav" href="#contact"> Contact </a>
       </p>
     </div>
     <!-- Our Process -->
@@ -52,23 +52,20 @@
         </h2>
       </div>
       <h3>
-        <a href="#"> Portfolio </a>
+        Portfolio
       </h3>
-      <p> Coming Soon
-      </p>
-      <h3>
-        <a href="#"> Team </a>
+      <p> Coming Soon</p>
+
+      <h3> Team
       </h3>
-      <p> We're Hiring!
-      </p>
+
+      <p> We're Hiring!</p>
       <h3>
-        <a href="#"> Contact</a>
-      <p> Phone (555)-555-5555
-      </p>
-      <p> Email: test@example.com
-      </p>
-      <p> Twitter: @test
-      </p>
+        Contact
+      </h3>
+      <p> Phone (555)-555-5555 </p>
+      <p> Email: test@example.com </p>
+      <p> Twitter: @test </p>
     <!-- Footer -->
     <div id="footer">
       <p> © Broadway 2017
